# filesender

./: CMakeLists.txt  client.cpp  server.cpp
